Disabled unneeded usrsctp options inet and inet6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,8 +206,10 @@ add_subdirectory(deps/plog EXCLUDE_FROM_ALL)
 if(SCTP_DEBUG)
 	add_definitions(-DSCTP_DEBUG)
 endif()
-option(sctp_build_programs 0)
-option(sctp_build_shared_lib 0)
+option(sctp_build_shared_lib OFF)
+option(sctp_build_programs OFF)
+option(sctp_inet OFF)
+option(sctp_inet6 OFF)
 set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 add_subdirectory(deps/usrsctp EXCLUDE_FROM_ALL)
 if (MSYS OR MINGW)
