Added PREFER_SYSTEM_LIB cmake option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,12 @@ set(PROJECT_DESCRIPTION "C/C++ WebRTC network library featuring Data Channels, M
 # Options
 option(USE_GNUTLS "Use GnuTLS instead of OpenSSL" OFF)
 option(USE_NICE "Use libnice instead of libjuice" OFF)
-option(USE_SYSTEM_SRTP "Use system libSRTP" OFF)
-option(USE_SYSTEM_JUICE "Use system libjuice" OFF)
-option(USE_SYSTEM_USRSCTP "Use system libusrsctp" OFF)
-option(USE_SYSTEM_PLOG "Use system Plog" OFF)
-option(USE_SYSTEM_JSON "Use system Nlohmann JSON" OFF)
+option(PREFER_SYSTEM_LIB "Prefer system libraries over deps folder" OFF)
+option(USE_SYSTEM_SRTP "Use system libSRTP" ${PREFER_SYSTEM_LIB})
+option(USE_SYSTEM_JUICE "Use system libjuice" ${PREFER_SYSTEM_LIB})
+option(USE_SYSTEM_USRSCTP "Use system libusrsctp" ${PREFER_SYSTEM_LIB})
+option(USE_SYSTEM_PLOG "Use system Plog" ${PREFER_SYSTEM_LIB})
+option(USE_SYSTEM_JSON "Use system Nlohmann JSON" ${PREFER_SYSTEM_LIB})
 option(NO_WEBSOCKET "Disable WebSocket support" OFF)
 option(NO_MEDIA "Disable media transport support" OFF)
 option(NO_EXAMPLES "Disable examples" OFF)
