Disable warnings as errors by default for libSRTP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,12 @@ if(USE_GNUTLS)
 else()
 	option(USE_NETTLE "Use Nettle in libjuice" OFF)
 	if(NOT USE_SYSTEM_SRTP)
-		option(ENABLE_OPENSSL "Enable OpenSSL crypto engine for SRTP" ON)
+		option(ENABLE_OPENSSL "Enable OpenSSL crypto engine for libSRTP" ON)
 	endif()
+endif()
+
+if(NOT WARNINGS_AS_ERRORS AND NOT USE_SYSTEM_SRTP)
+	option(BUILD_WITH_WARNINGS "Add warning as error flags for libSRTP" OFF)
 endif()
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
