Disabled sctp_werror to compile with MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,6 +247,7 @@ else()
 	option(sctp_build_programs OFF)
 	option(sctp_inet OFF)
 	option(sctp_inet6 OFF)
+	option(sctp_werror OFF)
 	set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 	add_subdirectory(deps/usrsctp EXCLUDE_FROM_ALL)
 	if (MSYS OR MINGW)
