Set the shared object version (SOVERSION) to only version major.minor
This declares that the library ABI is intended to be backward
compatible to older versions of the same major.minor version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,7 +272,7 @@ add_library(datachannel SHARED
 	${LIBDATACHANNEL_IMPL_HEADERS})
 set_target_properties(datachannel PROPERTIES
 	VERSION ${PROJECT_VERSION}
-	SOVERSION ${PROJECT_VERSION}
+	SOVERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
 	CXX_STANDARD 17
 	CXX_VISIBILITY_PRESET default)
 target_compile_definitions(datachannel PRIVATE RTC_EXPORTS)
