gjw impl of videocall
Signed-off-by: gaojiawei <gaojiawei@xiaomi.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -527,6 +527,7 @@ if(NOT NO_EXAMPLES)
 	endif()
 	if(NOT NO_MEDIA AND NOT NO_WEBSOCKET)
     	add_subdirectory(examples/streamer)
+		add_subdirectory(examples/videocall)
 	endif()
 	add_subdirectory(examples/copy-paste)
 	add_subdirectory(examples/copy-paste-capi)
