--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -378,6 +378,10 @@ else()
 		endif()
 	endif()
 	find_package(OpenSSL REQUIRED)
+	if(OPENSSL_VERSION GREATER_EQUAL 3.0)
+		message(STATUS "OpenSSL version high enough. Activate SSL LOAD VERFIY")
+		add_definitions(-DUSE_SSL_LOAD_VERIFY)
+	endif()
 	target_compile_definitions(datachannel PRIVATE USE_GNUTLS=0)
 	target_compile_definitions(datachannel-static PRIVATE USE_GNUTLS=0)
 	target_link_libraries(datachannel PRIVATE OpenSSL::SSL)
