feat: add examples/signaling-server-libdatachannel-ws
added simple signaling-server implemented using libdatachannel cpp-api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -544,6 +544,7 @@ if(NOT NO_EXAMPLES)
 	if(NOT NO_WEBSOCKET)
 		add_subdirectory(examples/client)
 		add_subdirectory(examples/client-benchmark)
+		add_subdirectory(examples/signaling-server-libdatachannel-ws)
 	endif()
 	if(NOT NO_MEDIA)
 		add_subdirectory(examples/media-receiver)
