--- a/.github/workflows/build-nomedia.yml
+++ b/.github/workflows/build-nomedia.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: ilammy/msvc-dev-cmd@v1
     - name: install packages
-      run: choco install openssl --version=3.1.1
+      run: choco install openssl
     - name: submodules
       run: git submodule update --init --recursive --depth 1
     - name: cmake
