--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,7 @@
 	shallow = true
 [submodule "deps/usrsctp"]
 	path = deps/usrsctp
-	url = https://github.com/sctplab/usrsctp.git
+	url = https://github.com/paullouisageneau/usrsctp.git
 	shallow = true
 [submodule "deps/libjuice"]
 	path = deps/libjuice
