Copy datachannel PDB files when compiling for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -515,6 +515,11 @@ install(TARGETS datachannel EXPORT LibDataChannelTargets
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
+if(MSVC)
+	install(FILES $<TARGET_PDB_FILE:datachannel>
+    DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
+endif()
+
 install(FILES ${LIBDATACHANNEL_HEADERS}
 	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rtc
 )
