Guard TARGET_PDB_FILE for static builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -515,9 +515,9 @@ install(TARGETS datachannel EXPORT LibDataChannelTargets
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
-if(MSVC)
-	install(FILES $<TARGET_PDB_FILE:datachannel>
-    DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
+if(MSVC AND BUILD_SHARED_LIBS)
+    install(FILES $<TARGET_PDB_FILE:datachannel>
+        DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
 endif()
 
 install(FILES ${LIBDATACHANNEL_HEADERS}
